--- a/css/typography.css
+++ b/css/typography.css
@@ -65,7 +65,7 @@ body.dark-mode .nav-title {
   color: white;
 }
 body.dark-mode .button {
-  background-color: #333333; /* Same color as dark mode background */
+  background-color: #363636; /* Same color as dark mode background */
   color: white;
   border-color: white; /* Change border color to white */
 }
